# picmeo

./: Dockerfile  README.md  app.py  docker-compose.yml  ngrok.yml.example  place_order.py  pyproject.toml  run.py
src/api/media/: media.py
src/api/users/: schema.py  users.py
src/api/whatsapp/: functions.py  schema.py  whatsapp.py
src/prodigi/: prodigi.py  schema.py  settings.py
src/storage/: get_database.py  settings.py  storage.py
src/utilities/: files_utils.py  settings.py
tests/: schema_fixtures.py  test_prodigi.py
tests/prodigi_sample_responses/: create_order_ord.json  get_order_actions.json  get_order_ord_1101519.json  get_orders.json  post_order_action_cancel.json
tests/test_whatsapp/: tests_unit.py  tests_unit_message_schemas.py
tests/tests_prodigi/: test_prodigi.py
tests/tests_whatsapp/: tests_unit.py  tests_unit_message_schemas.py
