[tool.poetry]
name = "picmeo"
version = "0.1.0"
description = ""
authors = ["gonzalogacc <gonzalogacc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.1"
pytest = "^7.4.1"
fastapi = "^0.103.1"
python-dotenv = "^1.0.0"
google-cloud-storage = "^2.12.0"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
